--- a/index.html
+++ b/index.html
@@ -45,18 +45,21 @@
         <div class="statisticks-content-columns">
             
             <div class="statisticks-content-column">
-                <img src="assets/Person.svg" alt="">
+                <div class="circle"></div>
+                <img src="assets/Person.svg" alt=""  class="first-circle">
                 <p class="statisticks-paragraph">1000+</p>
                 <p class="statisticks-paragraph2">daily entries</p>
             </div>
             <div class="statisticks-content-column">
-                <img src="assets/Eye.svg" alt="">
+                <div class="circle2"></div>
+                <img src="assets/Eye.svg" alt="" class="secound-circle">
                 <p class="statisticks-paragraph">2000000+</p>
                 <p class="statisticks-paragraph2">seen products every day</p>
             </div>
             
             <div class="statisticks-content-column">
-                <img src="assets/Catalog.svg" alt="">
+                <div class="circle3"></div>
+                <img src="assets/Catalog.svg" alt=""  class="third-circle">
                 <p class="statisticks-paragraph">10000+</p>
                 <p class="statisticks-paragraph2">added posts daily</p>
             </div>
